third_party/move/move-compiler-v2/tests/checking/variants/variants_test_parse_err1.exp

Diagnostics:
error: unexpected token
   ┌─ tests/checking/variants/variants_test_parse_err1.move:10:19
   │
10 │         (c is Red|)
   │                   ^
   │                   │
   │                   Unexpected ')'
   │                   Expected a type name
